--- a/src/posts/algorithm/位运算题.md
+++ b/src/posts/algorithm/位运算题.md
@@ -1,4 +1,15 @@
+---
+title: 位运算写题
+icon: pen-to-square
+date: 2025-8-18
+categories:
+ - 算法
+tags:
+ - 位运算
+
+---
 [67. 二进制求和 - 力扣（LeetCode）](https://leetcode.cn/problems/add-binary/?envType=study-plan-v2&envId=top-interview-150)
+
 
 >给你两个二进制字符串 `a` 和 `b` ，以二进制字符串的形式返回它们的和。
 >
