线程的实现方式、多线程轮流打印数字使用ArrayBlockingQueue实现

--- a/src/posts/项目/面试遇到的题.md
+++ b/src/posts/项目/面试遇到的题.md
@@ -197,6 +197,47 @@ public class Main {
 
 ```
 
+使用ArrayBlockingQueue
+
+```java
+public class ThreadsPrint {
+    public static void main(String[] args) {
+        ArrayBlockingQueue<Integer> queue1 = new ArrayBlockingQueue<>(1);
+        ArrayBlockingQueue<Integer> queue2 = new ArrayBlockingQueue<>(1);
+        try {
+            queue1.put(0);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        Thread thread1 = new Thread(()->{
+            for(int i = 0; i <= 200;i+=2){
+                try {
+                    queue1.take();
+                    System.out.println(i);
+                    queue2.put(0);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        },"线程1");
+        Thread thread2 = new Thread(()->{
+            for(int i = 1; i <= 200;i+=2){
+                try {
+                    queue2.take();
+                    System.out.println(i);
+                    queue1.put(0);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        },"线程2");
+        thread1.start();
+        thread2.start();
+
+    }
+}
+```
+
 创建多线程的方法
 
 ①继承Thread
@@ -251,235 +292,6 @@ public class Main {
     }
 }
 ```
-
-
-
-
-
-## SQL语句
-
-### 一、数据库操作
-
-- **CREATE DATABASE**：创建数据库
-
-  ```
-  CREATE DATABASE test_db;
-  ```
-
-- **DROP DATABASE**：删除数据库
-
-  ```
-  DROP DATABASE test_db;
-  ```
-
-- **USE**：切换数据库
-
-  ```
-  USE test_db;
-  ```
-
-------
-
-### 📌 二、数据表操作
-
-- **CREATE TABLE**：创建表
-
-  ```
-  CREATE TABLE users (
-      id INT PRIMARY KEY AUTO_INCREMENT,
-      name VARCHAR(50) NOT NULL,
-      age INT,
-      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-  );
-  ```
-
-- **DROP TABLE**：删除表
-
-  ```
-  DROP TABLE users;
-  ```
-
-- **ALTER TABLE**：修改表结构
-
-  ```
-  ALTER TABLE users ADD email VARCHAR(100);
-  ALTER TABLE users DROP COLUMN age;
-  ALTER TABLE users MODIFY name VARCHAR(100);
-  ```
-
-------
-
-### 📌 三、数据操作（增删改查）
-
-- **INSERT INTO**：插入数据
-
-  ```
-  INSERT INTO users (name, age) VALUES ('Alice', 20);
-  ```
-
-- **UPDATE**：更新数据
-
-  ```
-  UPDATE users SET age = 25 WHERE name = 'Alice';
-  ```
-
-- **DELETE**：删除数据
-
-  ```
-  DELETE FROM users WHERE name = 'Alice';
-  ```
-
-- **SELECT**：查询数据
-
-  ```
-  SELECT id, name, age FROM users;
-  SELECT * FROM users WHERE age > 18;
-  ```
-
-------
-
-### 📌 四、查询关键字
-
-- **DISTINCT**：去重
-
-  ```
-  SELECT DISTINCT age FROM users;
-  ```
-
-- **WHERE**：条件
-
-  ```
-  SELECT * FROM users WHERE age >= 18;
-  ```
-
-- **AND / OR / NOT**：逻辑运算
-
-  ```
-  SELECT * FROM users WHERE age > 18 AND name = 'Alice';
-  ```
-
-- **ORDER BY**：排序
-
-  ```
-  SELECT * FROM users ORDER BY age DESC;
-  ```
-
-- **LIMIT**：限制条数（MySQL 用法）
-
-  ```
-  SELECT * FROM users LIMIT 5;
-  ```
-
-- **BETWEEN**：范围查询
-
-  ```
-  SELECT * FROM users WHERE age BETWEEN 18 AND 25;
-  ```
-
-- **IN**：集合查询
-
-  ```
-  SELECT * FROM users WHERE name IN ('Alice', 'Bob');
-  ```
-
-- **LIKE**：模糊查询
-
-  ```
-  SELECT * FROM users WHERE name LIKE 'A%';  -- 以 A 开头
-  SELECT * FROM users WHERE name LIKE '%e';  -- 以 e 结尾
-  ```
-
-------
-
-### 📌 五、聚合与分组
-
-- **COUNT / SUM / AVG / MAX / MIN**
-
-  ```
-  SELECT COUNT(*) FROM users;
-  SELECT AVG(age) FROM users;
-  ```
-
-- **GROUP BY**：分组
-
-  ```
-  SELECT age, COUNT(*) FROM users GROUP BY age;
-  ```
-
-- **HAVING**：对分组后的结果过滤（区别于 WHERE）
-
-  ```
-  SELECT age, COUNT(*) AS cnt FROM users GROUP BY age HAVING cnt > 1;
-  ```
-
-------
-
-### 📌 六、连接查询（JOIN）
-
-- **INNER JOIN**（内连接）
-
-  ```
-  SELECT u.id, u.name, o.order_id
-  FROM users u
-  INNER JOIN orders o ON u.id = o.user_id;
-  ```
-
-- **LEFT JOIN**（左连接）
-
-  ```
-  SELECT u.id, u.name, o.order_id
-  FROM users u
-  LEFT JOIN orders o ON u.id = o.user_id;
-  ```
-
-- **RIGHT JOIN**（右连接）
-
-  ```
-  SELECT u.id, u.name, o.order_id
-  FROM users u
-  RIGHT JOIN orders o ON u.id = o.user_id;
-  ```
-
-------
-
-### 📌 七、子查询
-
-- **子查询（Subquery）**
-
-  ```
-  SELECT name FROM users WHERE id IN (
-      SELECT user_id FROM orders WHERE amount > 100
-  );
-  ```
-
-------
-
-### 📌 八、其他常见关键字
-
-- **AS**：别名
-
-  ```
-  SELECT name AS username FROM users;
-  ```
-
-- **UNION / UNION ALL**：合并查询结果
-
-  ```
-  SELECT name FROM users
-  UNION
-  SELECT name FROM employees;
-  ```
-
-- **EXISTS**：是否存在
-
-  ```
-  SELECT * FROM users u WHERE EXISTS (
-      SELECT 1 FROM orders o WHERE o.user_id = u.id
-  ```
-
-CONCAT() - 将多个字符串连接成一个字符串。
-
-CHAR_LENGTH() - 返回字符串的长度（以字符为单位）。
 
 ## 不想让方法抛出异常该怎么办
 
@@ -537,7 +349,7 @@ public int countWords(String filePath) throws IOException {
   - `BufferedInputStream`、`BufferedOutputStream`
   - `BufferedReader`、`BufferedWriter`
 
-怎么实现项目中缓存一致性的？
+## 怎么实现项目中缓存一致性的？
 
 1. 第一次删除：在更新数据库前，先删除缓存。
 
@@ -550,3 +362,8 @@ public int countWords(String filePath) throws IOException {
     第一次删除的目的是为了清除缓存旧值，强制后续读请求直接访问数据库（避免直接返回旧缓存）。
 
     第二次删除（延迟后）的目的是为了清除在数据库更新期间可能被其他请求写入的旧缓存值
+
+## new对象内存分配在哪里
+
+一般分配在堆中，特定情况可能分配在栈中。JVM的JIT(即时编译)会做逃逸分析，判断对象是否“逃出方法作用域”，如果没有逃逸出方法可能会将对象分配到栈中。
+
